--- a/index.qmd
+++ b/index.qmd
@@ -13,7 +13,7 @@ Francine Couture est professeure au département d’histoire de l’art depuis 
 ## Formation académique
 - Baccalauréat en histoire de l'art, Université de Montréal, 1968-1971
 - Maîtrise en histoire de l'art, Université de Paris-Nanterre, 1971-1973
-- Doctorat en anthropologie social et culture, École pratique des hautes études à Paris, 1973-1981
+- Doctorat en anthropologie sociale et culture, École pratique des hautes études à Paris, 1973-1981
 - Études post-doctorales, Département de Sociologie, Université de Montréal, 1982-1983
 
 ## Expérience professionelle
