--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Francine Couture"
 about:
     template: trestles
-    image: francine-2024.heic
+    image: francine-2024-png.png
 lang: fr
 ---
 
@@ -31,7 +31,7 @@ Francine Couture est professeure au département d’histoire de l’art depuis 
 ## Recherches
 Mes activités d’enseignement et de recherche m’ont amenée à établir des points de rencontre entre l’histoire de l’art et la sociologie de l’art. Mes travaux de recherche ont porté sur les rapports de l’art contemporain du Québec avec l’institution artistique et le contexte socioculturel. Cette posture interdisciplinaire m’a conduite à étudier le rôle de médiation joué par les différents intermédiaires assurant le passage des œuvres de l’atelier de l’artiste vers les lieux de diffusion. Au fil de ma carrière, j'ai constitué trois équipes de recherche dont les travaux ont donné lieu à la publication des ouvrages collectifs suivants, dont j'ai assuré la direction :
 
-- *Les arts visuels au Québec dans les soixante, La reconnaissance de la modernité* (1993)
+- *Les arts visuels au Québec dans les années soixante, La reconnaissance de la modernité* (1993)
 - *Les arts visuels au Québec dans les années soixante*, *L’éclatement du modernisme* (1997)
 
   J'ai contribué à ces ouvrages en étudiant les pratiques artistiques et les discours de la critique d’art qui ont favorisé les relations entre l’art et la technologie.
